<resources>
    <string name="app_name">Auction</string>
    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>
    <string name="message">消息</string>

    <string name="find">发现</string>

    <string name="circle">圈子</string>

    <string name="home">通讯录</string>

    <string name="mine">我的</string>
</resources>