<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_message"
        android:icon="@drawable/sl_drawable_message"
        android:title="@string/message" />
    <item
        android:id="@+id/action_find"
        android:icon="@drawable/sl_drawable_find"
        android:title="@string/find" />

    <item
        android:id="@+id/action_circle"
        android:icon="@drawable/sl_drawable_circle"
        android:title="@string/circle" />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/sl_drawable_home"
        android:title="@string/home" />
    <item
        android:id="@+id/action_mine"
        android:icon="@drawable/sl_drawable_mine"
        android:title="@string/mine" />

</menu>